--- a/css/index.css
+++ b/css/index.css
@@ -40,11 +40,7 @@ button{
     transition: 1s;
 
 }
-@media only screen and (orientation: portrait){
-	*{
-		letter-spacing: 1px;
-	}
-}
+
 .inner header{
  width:50%;
  margin:auto;
@@ -200,4 +196,18 @@ color:#000;
 	background-color:#f8f8f8;
   }
   
-  
+  @media only screen and (orientation: portrait){
+	*{
+		letter-spacing: 1px;
+	}
+	.items{
+		display:flex;
+		flex-direction: column-reverse;
+	}
+	h1{
+		font-size: 30px;
+	}
+	.act{
+		padding-bottom: 100px;
+	}
+}
